# mlframe

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .semgrep.yml  .yamllint  BYPASSED_HOOKS.md  Backtesting.py  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Data.py  Ensembling.py  FeatureEngineering.py  Features.py  Helpers.py  MANIFEST.in  Models.py  OldEnsembling.py  README.md  SECURITY.md  W1_PROGRESS.md  __init__.py  _chunk_fe_out.txt  _ensembling.py  _helpers.py  arrays.py  audit_disposition.md  audit_round2_checklist.md  audit_round3_checklist.md  audit_round4_checklist.md  baselines.py  bench_helpers.py  bench_long_strings.py  bench_metadata_save.py  bench_polars_cb_nullfrac.py  bench_polars_largestring_cb_xgb.py  (+68 more)
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml
audit/: CODE_REVIEW_2026-05-17.md
benchmarks/: __init__.py  bench_date_features_batched_pandas.py  bench_dcd_pair_su_scaling.py  bench_dcd_pair_su_scaling_result.json  bench_muon_triton_vs_eager.py  bench_robust_linres_1M.py  bench_robust_linres_1M_RESULTS.md  bench_torchao_int8_predict.py  composite_business_value_demo.py  composite_business_value_demo_results.json  composite_ensemble_shootout.py  composite_ensemble_shootout_results.json  composite_hint_benchmark.py  composite_hint_benchmark_results.json  composite_multi_base_benchmark.py  composite_multi_base_benchmark_results.json  composite_profile.py  composite_target_benchmark.py  composite_target_benchmark_results.json  fe_audit_fixes_profile.py  profile_composite_new_code.py  slice_es_100k_kfold10.json  slice_es_100k_kfold10_log.txt  slice_es_100k_kfold10_log_v2.txt  slice_es_synthetic_bench.json  slice_es_wave2_bench.json  slice_es_wave3_bench.json  stratified_mi_benchmark.py
docs/: DEBUGGING_UPSTREAM_ERRORS.md  FE_MRMR_IDEAS_BACKLOG.md  FE_MRMR_IDEAS_BACKLOG_2026-06-03.md  MRMR_RESEARCH.md  MRMR_RESEARCH_2026_05_28.md  MULTI_OUTPUT.md  MULTI_TARGET_REGRESSION.md  NUMERICAL_STABILITY_REPORT.md  README.md  SELECTION_BIAS.md  SHAP_PROXIED_FS_GAME_THEORY.md  WAVE5_GPU_ROADMAP.md  audit_2026_05_24_summary.md  baseline_diagnostics_guide.md  calibration_policy.md  composite_config_reference.md  composite_targets_guide.md  composite_targets_tutorial.ipynb  date_features_kaggle_research.md  dummy_baselines_guide.md  feature_handling_examples.md  honest_diagnostics_guide.md  pysr_fe_upgrade_research.md  sidecar_verification_guide.md  visualization.md
feature_engineering/: __init__.py  _numerical_stable.py  basic.py  bruteforce.py  categorical.py  financial.py  hurst.py  mps.py  numerical.py  timeseries.py
feature_selection/: filters.py  general.py  mi.py  optbinning.py  wrappers.py
legacy/: Features.py  Models.py  OldEnsembling.py  __init__.py  training_old.py
mlframe/: calibration.py  config.py  early_stopping.py  ensembling.py  estimators.py  lightninglib.py  metrics.py  optimization.py  preprocessing.py  stats.py  synthetic.py  tests.py  text.py  training.py  unittest_arrays.py
profiling/: PERF_NOTES.md  __init__.py  aggregate_prof.py  bench_any_isinf_short_circuit.py  bench_audit_fixes_cprofile.py  bench_audit_residuals_kernels.py  bench_baseline_diagnostics_sample.py  bench_batch_ice_kernel_pass_fusion.py  bench_batch_mi_scratch_reuse.py  bench_bootstrap_logloss_pre_gather.py  bench_bulk_shuffle_three_mis_fused.py  bench_calibration_layout.py  bench_cat_joint_mi.py  bench_cb_logits_softmax_layout.py  bench_cmim_l84.py  bench_coarse_basis_batched.py  bench_coarse_basis_nocenter.py  bench_compute_mi_from_classes_no_zip.py  bench_compute_multiclass_error.py  bench_corr_sq_noalloc.py  bench_cuda_perm_variants.py  bench_cupy_bincount_sync.py  bench_cupy_d2h_narrow.py  bench_disc_fcontig.py  bench_disc_sort_vs_searchsorted.py  bench_drift_fi_vs_model_harm.py  bench_drift_fi_vs_model_harm_classification.py  bench_dummy_baseline_stratified.py  bench_ece_score_variants.py  bench_fast_log_loss_binary_fused.py  bench_fast_roc_auc_argsort_inside.py  bench_fe_shortlist_transforms.py  bench_feature_distribution.py  bench_feature_drift_vectorize.py  bench_gpu_metrics.py  bench_grouped_aucs_parallel.py  bench_hermite_ram_and_df_mutation.py  bench_hinge_fwl_rank1.py  bench_ice_only.py  bench_interaction_information_routing.py  (+84 more)
reporting/: __init__.py  auto_dispatch.py  colors.py  output.py  spec.py
research/: Algebraic_Correction.md  CoreSet_Selection.md  MoE_Tabular.md  Polynomial_Aggregators.md  README.md  Structural_Testor_Selector_MLFrame.md  gt_01_shapley_interaction_indices.md  gt_02_core_nucleolus_stability.md  gt_03_banzhaf_value_attribution.md  gt_04_data_shapley_valuation.md  gt_05_shapley_ensemble_weighting.md  gt_06_adversarial_reweighting_game.md  gt_07_fe_generator_shapley_budgeting.md  gt_08_interaction_levers_auto_default.md  gt_09_two_phase_residual_fs.md
scratchpad/: notes.md
scripts/: README.md  bandit_warn.py  bench_regression_largen_render.py  bench_slice_es_100k_kfold10.py  bench_slice_es_synthetics.py  bench_slice_es_synthetics_v2.py  bench_slice_es_synthetics_v3.py  bench_tiny_rerank_parallel.py  black_filtered_apply.py  check_default_tuning.py  diagnose_cat_drift.py  format_warn.py  gen_composite_config_reference.py  numba_coverage_report.py  render_gallery.py  run_meta_tests.py  run_numba_coverage.ps1  run_numba_coverage.sh  vulture_warn.py  vulture_whitelist.py
testing/: __init__.py  parametric.py
tests/: __init__.py  _pysr_gate.py  composite_discovery_audit_notes.md  conftest.py  interrogate.toml  ruff.toml  test_arrays.py  test_audit_2026_07_21_x_ml_correctness_meta_fixes.py  test_baselines.py  test_biz_val_early_stopping_warm_start.py  test_biz_val_early_stopping_wrapper.py  test_calibration_plot_layout.py  test_colorama_reinit_patch.py  test_composite_config_reference_drift.py  test_conventions.py  test_cuda_autoconfig.py  test_custom_estimators.py  test_docs_examples_smoke.py  test_early_stopping_wrapper_best_model_snapshot.py  test_ensembling.py  test_ensembling_compare_default_sort.py  test_ensembling_median_anchor_bit_identical.py  (+30 more)
(+7846 files in other folders)
