[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlframe"
dynamic = ["version"]
description = "Production-grade machine learning framework for tabular data: training pipelines, feature engineering & selection, ensembling, calibration, ranking, and quantile regression."
authors = [{name = "Anatoly Alexeev", email = "fingoldo@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "machine-learning",
    "scikit-learn",
    "catboost",
    "lightgbm",
    "xgboost",
    "feature-engineering",
    "feature-selection",
    "ensembling",
    "calibration",
    "ranking",
    "quantile-regression",
    "tabular",
    "automl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Minimal hard requirements so `pip install mlframe` stays light.
# Domain-specific stacks (catboost / lightgbm / shap / mlflow / ...) ship as extras.
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "polars>=0.20",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pyarrow>=10.0",
    "joblib>=1.2",
    "tqdm>=4.65",
    "pydantic>=2.0",
    "portalocker>=2.7",
    "dill>=0.3.6",
    "orjson>=3.9",
    "numba>=0.56",
    "psutil>=5.9",
    "matplotlib>=3.7",
    # The four below are imported UNCONDITIONALLY at module load time across
    # src/mlframe/{feature_engineering/numerical,feature_selection/filters/*}
    # and would otherwise raise ImportError on `import mlframe`. Audited via
    # AST top-level scan on 2026-05-15.
    "antropy>=0.1",
    # 2026-05-28: astropy removed from CORE deps. Native impls of Bayesian Blocks
    # (Scargle 2013) and Knuth's rule (Knuth 2006) ship in
    # feature_selection/filters/discretization.py:histogram(). All consumers
    # (feature_engineering/numerical.py, _numerical_numba.py,
    # feature_selection/filters/_mrmr_fingerprints.py) wrap the astropy import
    # in try/except with np.histogram fallback, so removing astropy from core
    # only loses the optional astropy-only bin schemes. Listed in [signal]
    # extras below for callers who want them.
    "category-encoders>=2.6",
    "expiringdict>=1.2",
    "pympler>=1.0",   # used via pyutilz.system; unconditional import in tests/feature_engineering/*
    # pyutilz is not yet on PyPI. Install it from GitHub before mlframe:
    #   pip install "pyutilz @ git+https://github.com/fingoldo/pyutilz.git"
    # The version specifier below works once pyutilz is published; until then,
    # pip needs to resolve pyutilz from the user's environment (already installed).
    "pyutilz>=1.0.0",
]

[project.optional-dependencies]
# Gradient-boosting backends used by the training pipeline.
boosting = [
    "catboost>=1.2",
    "lightgbm>=4.0",
    "xgboost>=2.0",
]

# Calibration + uncertainty + interpretability stack.
# pycalib is dev-only on PyPI (no stable 0.1.0 release as of 2026-05-15);
# we permit pre-releases via dev0 floor + post-release matching.
calibration = [
    "shap>=0.44",
    "venn-abers>=1.4",
    "netcal>=1.3",
    "betacal>=1.1",
    "pycalib>=0.1.0.dev0",
    "uncertainty-calibration>=0.1",
    "properscoring>=0.1",
]

# Neural-network training stack (PyTorch + Lightning).
# `lightning` is the canonical post-2.0 distribution name; the older
# `pytorch-lightning` alias is a thin re-export package.
# `captum` powers the native NN feature-importance path
# (``_captum_integrated_gradients_importance`` in evaluation.py);
# 2026-05-26 bench matched permutation recall@10=1.00 with a ~5x
# speedup on the 500-feature scenario. Optional within the neural
# extras: when absent ``get_model_feature_importances`` falls back
# to permutation (which is always available via sklearn).
neural = [
    "torch>=2.0",
    "lightning>=2.0",
    "pytorch-lightning>=2.0",
    "captum>=0.7",
]

# AutoML + hyperparameter optimization.
automl = [
    "flaml>=2.0",
]

# Feature-engineering generators: PySR (symbolic regression) discovers
# polynomial/algebraic features; optbinning emits WoE / monotonic-binned
# encodings. Both are used by ``preprocessing_extensions_config`` /
# ``MRMR.fe_max_steps`` paths -- they belong with feature engineering,
# not with AutoML hyperparameter search.
# ``cma`` powers the default Hermite-FE pair optimiser
# (``_hermite_fe_optimise_pair.optimise_hermite_pair(optimizer='cma')``)
# and its ``cma_batch`` variant; without it the dispatcher silently
# returns ``None`` and downstream FE skips engineered candidates.
# ``optuna`` backs the legacy TPE optimiser path (``optimizer='optuna'``)
# kept for benchmark comparisons in tests/feature_selection/
# test_biz_val_filters_hermite_fe.py and as a fallback hint in the
# error message.
feature_engineering = [
    "pysr>=0.18",
    "optbinning>=0.19",
    "cma>=3.2",
    "optuna>=3.0",
]

# Resampling, encoding, stratification.
sampling = [
    "imbalanced-learn>=0.11",
    "category-encoders>=2.6",
    "iterative-stratification>=0.1.7",
]

# Polars stack: extras on top of the core polars dep (TA-Lib, DS helpers).
# Polars itself is a hard requirement and lives in [project].dependencies.
polars_ext = [
    "polars-talib>=0.1",
    "polars-ds>=0.4",
]

# Plotting and dashboards.
# ``ipywidgets`` is pulled in for CatBoost's MetricVisualizer (the ``plot=True``
# code path lazy-loads ``ipywidgets`` and re-raises ImportError when it's
# missing -- triggered transitively even when mlframe sets plot=False, on
# certain CB minor builds). Pinning here keeps the windows CI runner from
# failing on ``ModuleNotFoundError: No module named 'ipywidgets'`` inside
# ``catboost/widget/ipythonwidget.py``.
viz = [
    "matplotlib>=3.7",
    "plotly>=5.15",
    "seaborn>=0.13",
    "altair>=5.0",
    "hvplot>=0.9",
    "vegafusion[embed]>=1.5",
    "vl-convert-python>=1.0",
    "ipywidgets>=8.0",
]

# Experiment tracking.
mlflow = [
    "mlflow>=2.5",
]

# Database and storage backends.
db = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pymongo>=4.5",
    "duckdb>=0.9",
    "zstandard>=0.21",
]

# Signal-processing / scientific extras (entropy, wavelets, astropy).
signal = [
    "antropy>=0.1.4",
    "astropy>=5.3",
    "entropy-estimators>=0.0.1",
    "pywavelets>=1.4",
    "ruptures>=1.1",
]

# Dimensionality reduction and clustering.
unsupervised = [
    "hdbscan>=0.8.33",
    "umap-learn>=0.5",
]

# Classical statistics.
stats = [
    "statsmodels>=0.14",
]

# GPU acceleration (CuPy on CUDA 12.x). Uses the prebuilt cuda12x wheel + [ctk] (bundled NVRTC/ptxas/nvvm/headers)
# so `pip install mlframe[gpu]` gives a working runtime-compile GPU stack with no system CUDA toolkit needed;
# nvidia-cuda-nvcc-cu12 adds ptxas/nvvm/libdevice for numba.cuda. CUDA-11 / non-NVIDIA users stay on CPU (extra is opt-in).
gpu = [
    "cupy-cuda12x[ctk]>=14.0,<15.0",
    "nvidia-cuda-nvcc-cu12>=12.9",
    "gpu-info>=0.1",
]

# Transformer-style FE subpackage extras (see mlframe.feature_engineering.transformer).
# - transformer:       core CPU-only path; numba is already a hard dep, this is a marker for users wanting just the CPU blocks.
# - transformer_ann:   row-attention ANN backend (hnswlib).
# - transformer_gpu:   GPU acceleration on the two stages that win (RFF matmul + row-attention stage-4 fused RawKernel).
# - transformer_full:  ANN + GPU.
# cuVS / cagra is intentionally NOT in extras; no Windows wheel exists. WSL2/Linux users install manually via
# `mamba install -c rapidsai -c conda-forge cuvs` if they want GPU ANN.
transformer = []
transformer_ann = [
    # pynndescent is the default ANN backend (numpy 2 compatible, no C extension, Windows-safe).
    # hnswlib was the original choice; its wheels on Windows + numpy 2 segfault at import (built against numpy 1.x). Users with a working hnswlib can opt in
    # via the `ann_backend="hnswlib"` parameter but it's not in the extra to avoid surprise installs of a broken wheel.
    "pynndescent>=0.5",
]
transformer_gpu = [
    "cupy-cuda12x>=13.0,<15.0",
]
transformer_full = [
    "mlframe[transformer_ann,transformer_gpu]",
]

# Convenience meta-extra: union of all runtime extras.
all = [
    "mlframe[boosting,calibration,neural,automl,feature_engineering,sampling,polars_ext,viz,mlflow,db,signal,unsupervised,stats,transformer_ann]",
]

# Development tooling.
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.1",
    "pytest-benchmark>=4.0",
    "pytest-order>=1.2",          # pytest.mark.order(index=N) in tests/training/test_biz_val_training_core.py
    "pytest-randomly>=3.0",       # local-dev shuffle plugin. CI workflows disable it via `-p no:randomly` (see .github/workflows/*.yml) - local runs exercise random-order ordering to surface state-leak bugs, CI runs deterministic so flake triage stays clean.
    "pytest-instafail>=0.5",      # --instafail: streams tracebacks immediately on failure so worker-death INTERNALERRORs don't swallow the FAILURES section
    "pytest-progress>=1.3",       # --show-progress: prints [NN%] [N/Total] prefix on each test result line so long xdist runs surface percent-complete instead of opaque per-line PASSED chatter
    "coverage>=7.2",
    "hypothesis>=6.80",
    "freezegun>=1.2",             # frozen-time fixtures in tests/perf and tests/training calibration suites
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.0",
    "bandit>=1.7",
    "pre-commit>=3.3",
    # IPython is imported unconditionally by src/mlframe/evaluation/reports.py
    # and training/evaluation.py (for display_html / rich-shell detection).
    # Required so test collection of the modules that import them succeeds.
    "ipython>=8.0",
]

[project.scripts]
mlframe-tune-kernels = "mlframe.system.kernel_tuning_cache:main"
mlframe-gen-default-tuning = "mlframe.feature_selection._benchmarks.gen_default_tuning:main"

[project.urls]
Homepage = "https://github.com/fingoldo/mlframe"
Repository = "https://github.com/fingoldo/mlframe.git"
Issues = "https://github.com/fingoldo/mlframe/issues"
Changelog = "https://github.com/fingoldo/mlframe/blob/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "mlframe.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mlframe*"]
exclude = ["tests*", "legacy*", "benchmarks*", "profiling*", "docs*", "scripts*"]

# Static data files shipped with the wheel (if any).
[tool.setuptools.package-data]
mlframe = ["py.typed"]
# The anonymized default kernel-tuning JSON is consulted at runtime by
# filters._kernel_tuning (register_default_cache), so it MUST ship in the wheel.
"mlframe.feature_selection._benchmarks" = ["default_kernel_tuning.json"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -s --no-cov --strict-markers --strict-config --timeout=60 --instafail --ignore=legacy --ignore=benchmarks --ignore=profiling"
xfail_strict = true
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring full pipeline",
    "gpu: marks tests requiring GPU hardware",
    "benchmark: pytest-benchmark timing tests",
    "multigpu: requires multiple GPUs",
    "windows_only: skip on non-Windows",
    "linux_only: skip on non-Linux",
    "fast: fast subset (select with '-m fast'). Every new ML feature ships with a representative subset marked @pytest.mark.fast so the full code path runs in <15s total.",
    "slow_only: only runs when --slow flag is passed",
    "no_xdist: cannot run under pytest-xdist parallelism",
    "requires_xgb: requires xgboost",
    "requires_cb: requires catboost",
    "requires_torch: requires torch",
    "uses_matplotlib: test produces matplotlib figures; triggers plt.close('all') + gc in cleanup_memory autouse",
    "uses_torch: test allocates GPU/CPU torch tensors; triggers torch.cuda.empty_cache in cleanup_memory autouse",
    "numba_disabled: include in the NUMBA_DISABLE_JIT=1 nightly coverage run; tests run 10-100x slower under no-JIT, see scripts/run_numba_coverage.{sh,ps1}",
    "sklearn_matrix: include in the multi-sklearn-version CI matrix (.github/workflows/sklearn-matrix.yml); tests pin scikit-learn surface contracts across the supported version range (1.5-1.8) and must NOT depend on private internals. See tests/test_meta/test_sklearn_matrix_marker_invariants.py for the convention.",
]
filterwarnings = [
    "error::DeprecationWarning:mlframe",
    "ignore::DeprecationWarning",
    "ignore:.*penalty.*deprecated.*1\\.8:FutureWarning:sklearn",
    "ignore:.*quantile_method.*linear.*averaged_inverted_cdf:FutureWarning:sklearn",
    "ignore:X does not have valid feature names.*LGBMClassifier:UserWarning:sklearn",
    "ignore:Falling back to prediction using DMatrix due to mismatched devices:UserWarning:xgboost",
    "ignore:Skipping features without any observed values:UserWarning:sklearn",
    "ignore:The '.*dataloader' does not have many workers:UserWarning:lightning",
    "ignore:CheckpointDir.*exists and is not empty:UserWarning:lightning",
    "ignore:The number of training batches.*smaller than.*log_every_n_steps:UserWarning:lightning",
    "ignore:GPU available but not used:UserWarning:lightning",
    "ignore:You are trying to `self.log\\(\\)`.*trainer.*not registered:UserWarning:lightning",
    "ignore:Found.*module.*in val module that:UserWarning:lightning",
    # pytest-benchmark auto-disables itself under xdist (the default suite runs with -n); the benchmark tests are exercised for correctness, timing happens in the dedicated standalone benchmark workflow.
    "ignore:Benchmarks are automatically disabled because xdist plugin is active:pytest_benchmark.logger.PytestBenchmarkWarning",
    # joblib/loky resource_tracker noise on Windows: the loky worker memmap-folder cleanup races the OS file deletion at shutdown (FileNotFoundError / "leaked folder objects"). Third-party, unfixable here; the in-process variant is filtered, the resource-tracker-subprocess variant is harmless shutdown stderr.
    "ignore:resource_tracker:UserWarning",
]
log_cli = false

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/mlframe"]
omit = [
    "tests/*",
    "legacy/*",
    "benchmarks/*",
    "profiling/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    ".venv/*",
    "*/integrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if 0:",
    "if False:",
]
precision = 2
show_missing = true

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 160
target-version = ["py39", "py310", "py311", "py312", "py313", "py314"]
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | build
  | dist
  | __pycache__
  | legacy
)/
'''

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 160
target-version = "py39"
exclude = ["tests", "scripts", ".git", "__pycache__", "build", "dist", "legacy", "benchmarks", "_benchmarks", "profiling"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",   # line-length: project uses 160 chars (CLAUDE.md repeated rule), black + black-line-length above enforce visually
    "E401",   # multiple imports on one line: explicit ``import a, b`` is project-idiomatic in a few helpers; not worth churn
    "E402",   # module-level import not at top: legitimate for try/except optional-dep gates (cupy, polars, torch)
    "E701",   # multiple statements on one line (colon): used in compact one-liners like ``if x: continue``
    "I001",   # unsorted imports: isort runs separately; ruff's isort variant collides with our black + manual section order
    "N802",   # function name should be lowercase: legitimately mixed-case in math identifiers (e.g. ``computeFFT`` interop)
    "N803",   # arg name should be lowercase: sklearn-API surface uses X / Y / Xt convention required by check_estimator
    "N806",   # variable in function should be lowercase: same as N803 -- X / Y / Xt locals throughout estimator wrappers
    "B006",   # mutable default arg: kept open; some configs use dataclass-like helpers where caller never mutates; consider re-enabling case-by-case
    "F401",   # unused import: re-exports use explicit ``# noqa: F401`` inline; the global ignore is for tomb-stoned compat shims
    "F541",   # f-string without placeholders: tolerated in log lines that get placeholders added later in dev
    "UP031",  # printf-style %: keep for ``logger.info("... %s ...", val)`` lazy-format pattern (mandatory under structured logging)
    "UP006",  # use ``list`` / ``dict`` over typing.List: project targets 3.9 minimum where the deferred annotation form needs from __future__ import; keep typing.List for ABI clarity
    "UP007",  # use ``X | Y`` over Union: same 3.9 concern; ``Union`` evaluates eagerly without ``from __future__ import annotations``
    "UP045",  # use ``X | None`` over Optional: same 3.9 concern
    "UP037",  # quoted annotation: leave because we use forward references in dataclass slots heavily
    "F403",   # ``from x import *``: intentional in several namespace modules
    "F405",   # name may be undefined / from star-import: consequence of intentional F403, not a bug
    "B904",   # raise ... from inside except: stylistic, not a correctness issue
    "B009",   # getattr(x, "const"): stylistic
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**" = ["N801"]
"src/mlframe/training/_profile_*.py" = ["B023"]

# ---------------------------------------------------------------------------
# MyPy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
exclude = "(legacy|benchmarks|profiling)/"

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Strict-mode beachhead: mlframe.calibration is the smallest subpackage (4 files, ~1.3 kLOC total)
# with a stable public surface, low optional-dep churn (only ``post.py`` pulls heavy deps and gates
# them lazily), and tight scope (probability calibration metrics + post-hoc calibrators). Adopting
# strict mode here first surfaces type drift on the smallest blast radius; expansion to other
# subpackages should follow only after this one has been clean for one release.
[[tool.mypy.overrides]]
module = "mlframe.calibration.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
no_implicit_optional = true

# Second strict-mode beachhead: ``mlframe.utils.safe_pickle`` (162 LOC) -- shipped post-2026-05 with
# full annotations + ``from __future__ import annotations``, public surface consumed by the four
# pickle entry points (predict / inference / FE cache / composite cache) so type drift would cascade
# straight to the on-disk format. Other utils modules (eda, experiments, misc, text, nan_safe) still
# use the legacy ``from typing import *`` pattern, incomplete annotations, or numpy-return-any
# patterns; they remain off strict-mode until dedicated typing passes land them.
[[tool.mypy.overrides]]
module = "mlframe.utils.safe_pickle"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
no_implicit_optional = true
